--- a/ui/package.json
+++ b/ui/package.json
@@ -46,6 +46,9 @@
     "cmdk": "^1.1.1",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.6.0",
+    "ethers": "^6.15.0",
+    "framer-motion": "^12.23.26",
+    "idb": "^8.0.3",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.462.0",
     "next-themes": "^0.3.0",
@@ -62,13 +65,11 @@
     "vaul": "^0.9.9",
     "viem": "^2.39.0",
     "wagmi": "^2.19.3",
-    "zod": "^3.25.76",
-    "ethers": "^6.15.0",
-    "idb": "^8.0.3"
+    "zod": "^3.25.76"
   },
   "devDependencies": {
-    "@fhevm/mock-utils": "0.1.0",
     "@eslint/js": "^9.32.0",
+    "@fhevm/mock-utils": "0.1.0",
     "@tailwindcss/typography": "^0.5.16",
     "@types/node": "^22.16.5",
     "@types/react": "^18.3.23",
